--- a/p8105_hw2_alc2279.Rmd
+++ b/p8105_hw2_alc2279.Rmd
@@ -2,29 +2,132 @@
 title: "p8105_hw2_alc2279"
 author: "Annie Clark"
 date: "September 29, 2018"
-output: html_document
+output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+#Problem 0
+This “problem” focuses on structure of your submission, especially the use git and GitHub for reproducibility, R Projects to organize your work, R Markdown to write reproducible reports, relative paths to load data from local files, and reasonable naming structures for your files.
+
+To that end:
+
+* create a public GitHub repo + local R Project; we suggest naming this repo / directory
+p8105_hw2_YOURUNI (e.g.  p8105_hw2_ajg2202 for Jeff), but that’s not required
+* create a single .Rmd file named p8105_hw2_YOURUNI.Rmd that renders to github_document
+* create a subdirectory to store the local data files used in Problems 1 and 2, and use 
+relative paths to access these data files
+* Your solutions to Problems 1, 2, and 3 should be implemented in your .Rmd file, 
+and your git commit history should reflect the process you used to solve these Problems.
+
+For this Problem, we will assess adherence to the instructions above regarding repo structure, git commit history, and whether we are able to knit your .Rmd to ensure that your work is reproducible. Adherence to appropriate styling and clarity of code will be assessed in Problems 1+.
+
+#Problem 1
+##Part 1: Read and clean data
+This problem focuses on NYC Transit data; in particular, this CSV file contains information related to each entrance and exit for each subway station in NYC.
+
+Read and clean the data; retain line, station, name, station latitude / longitude, routes served, entry, vending, entrance type, and ADA compliance. Convert the entry variable from character (YES vs NO) to a logical variable (the ifelse or recode function may be useful).
+
+```{r}
+
 ```
 
-## R Markdown
+##Part 2: Describe dataset
+Write a short paragraph about this dataset – explain briefly what variables the dataset contains, describe your data cleaning steps so far, and give the dimension (rows x columns) of the resulting dataset. Are these data tidy?
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+##Part 3: Answer some questions:
 
-```{r cars}
-summary(cars)
+* How many distinct stations are there? Note that stations are identified both by name and by line (e.g. 125th St A/B/C/D; 125st 1; 125st 4/5); the distinct function may be useful here.
+
+```{r}
+
 ```
 
-## Including Plots
+* How many stations are ADA compliant?
 
-You can also embed plots, for example:
+```{r}
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+* What proportion of station entrances / exits without vending allow entrance?
+
+```{r}
+
+```
+
+* Reformat data so that route number and route name are distinct variables. How many distinct stations serve the A train? Of the stations that serve the A train, how many are ADA compliant?
+```{r}
+
+```
+
+#Problem 2
+
+##Part 1: Read and clean data
+This problem uses the Mr. Trash Wheel dataset, available as an Excel file on the course website. Please use the  HealthyHarborWaterWheelTotals2017-9-26.xlsx version.
+
+Read and clean the Mr. Trash Wheel sheet:
+
+* specify the sheet in the Excel file and to omit columns containing notes (using the range argument and cell_cols() function)
+* use reasonable variable names
+* omit rows that do not include dumpster-specific data
+* round the number of sports balls to the nearest integer and converts the result to an integer variable (using as.integer)
+
+Read and clean precipitation data for 2016 and 2017. For each, omit rows without precipitation data and add a variable year. Next, combine datasets and convert month to a character variable (the variable month.name is built into R and should be useful).
+
+```{r}
+
+```
+
+##Part 2: Describe dataset
+Write a paragraph about these data; you are encouraged to use inline R. Be sure to note:
+* the number of observations in both resulting datasets
+* give examples of key variables
+For available data, what was the total precipitation in 2017? What was the median number of sports balls in a dumpster in 2016?
+
+```{r}
+
+```
+
+#Problem 3
+
+##Part 1: Read and clean data
+This problem uses the BRFSS data. DO NOT include this dataset in your local data directory; instead, load the data from the  p8105.datasets package.
+
+For this question:
+
+* format the data to use appropriate variable names
+* focus on the “Overall Health” topic
+* exclude variables for class, topic, question, sample size, and everything from lower confidence limit to GeoLocation
+* structure data so that responses (excellent to poor) are variables taking the value of Data_value
+* create a new variable showing the proportion of responses that were “Excellent” or “Very Good”
+
+```{r}
+
+```
+
+##Part 2: Answer some questions
+Using this dataset, do or answer the following:
+
+* How many unique locations are included in the dataset? Is every state represented? What state is observed the most?
+
+```{r}
+
+```
+
+* In 2002, what is the median of the “Excellent” response value?
+
+```{r}
+
+```
+
+* Make a histogram of “Excellent” response values in the year 2002.
+
+```{r}
+
+```
+
+* Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
+
+```{r}
+
+```
+
