--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -27,21 +27,134 @@ This problem focuses on NYC Transit data; in particular, this CSV file contains 
 
 Read and clean the data; retain line, station, name, station latitude / longitude, routes served, entry, vending, entrance type, and ADA compliance. Convert the entry variable from character (YES vs NO) to a logical variable (the ifelse or recode function may be useful).
 
+``` r
+library(tidyverse)
+```
+
+    ## -- Attaching packages ------------------------------------------------------------ tidyverse 1.2.1 --
+
+    ## v ggplot2 3.0.0     v purrr   0.2.5
+    ## v tibble  1.4.2     v dplyr   0.7.6
+    ## v tidyr   0.8.1     v stringr 1.3.1
+    ## v readr   1.1.1     v forcats 0.3.0
+
+    ## -- Conflicts --------------------------------------------------------------- tidyverse_conflicts() --
+    ## x dplyr::filter() masks stats::filter()
+    ## x dplyr::lag()    masks stats::lag()
+
+``` r
+subway_data = 
+  read_csv(file = "./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
+  janitor::clean_names() %>% 
+  select(line:entry, vending, ada) %>% 
+  mutate(entry = recode(entry, "YES" = 1, "NO" = 0),
+         entry = as.logical(entry))
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_character(),
+    ##   `Station Latitude` = col_double(),
+    ##   `Station Longitude` = col_double(),
+    ##   Route8 = col_integer(),
+    ##   Route9 = col_integer(),
+    ##   Route10 = col_integer(),
+    ##   Route11 = col_integer(),
+    ##   ADA = col_logical(),
+    ##   `Free Crossover` = col_logical(),
+    ##   `Entrance Latitude` = col_double(),
+    ##   `Entrance Longitude` = col_double()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+``` r
+##Question - (1) as.logical and recode on same line? (2) better way to go char->log?
+```
+
 Part 2: Describe dataset
 ------------------------
 
 Write a short paragraph about this dataset – explain briefly what variables the dataset contains, describe your data cleaning steps so far, and give the dimension (rows x columns) of the resulting dataset. Are these data tidy?
 
-Part 3: Answer some questions:
-------------------------------
+Part 3: Answer some questions
+-----------------------------
 
 -   How many distinct stations are there? Note that stations are identified both by name and by line (e.g. 125th St A/B/C/D; 125st 1; 125st 4/5); the distinct function may be useful here.
 
+``` r
+nrow(distinct(subway_data, station_name, line))
+```
+
+    ## [1] 465
+
+``` r
+##Question - the "line" in the dataset is not A/B/C/D; rather it's lexington, 4th ave, etc. 
+##Question - nrow and function on one line? any way to make more simple?
+```
+
 -   How many stations are ADA compliant?
+
+``` r
+nrow(filter(subway_data, ada == TRUE))
+```
+
+    ## [1] 468
 
 -   What proportion of station entrances / exits without vending allow entrance?
 
--   Reformat data so that route number and route name are distinct variables. How many distinct stations serve the A train? Of the stations that serve the A train, how many are ADA compliant?
+``` r
+#find number of entrances/exits with no vending and entry
+entry_no_vending = nrow(filter(subway_data, vending == "NO", entry == TRUE))
+
+#find total number of entrances/exits
+all_entrances_exits = nrow(subway_data)
+
+#find proportion
+entry_no_vending / all_entrances_exits
+```
+
+    ## [1] 0.0369379
+
+Part 4: Another exericse
+------------------------
+
+Reformat data so that route number and route name are distinct variables.
+
+``` r
+subway_data =  
+  gather(subway_data, key = route_num, value = route_name, route1:route11) %>% 
+  separate(route_num, into = c("route", "route_num"), sep = 5) %>%
+  select(line:ada, route_num, route_name)
+  
+##Question - copy over subway_data? only saving out because need in next steps...
+```
+
+How many distinct stations serve the A train?
+
+``` r
+a_train_stations = filter(subway_data, route_name == "A")
+
+nrow(distinct(a_train_stations, station_name))
+```
+
+    ## [1] 56
+
+``` r
+##Questin - I created a new dataset -- is there a way to use piping for this?
+```
+
+Of the stations that serve the A train, how many are ADA compliant?
+
+``` r
+nrow(filter(a_train_stations, ada == TRUE))
+```
+
+    ## [1] 107
+
+``` r
+##Question - used new dataset - is there a way to use piping?
+```
 
 Problem 2
 =========
@@ -80,6 +193,10 @@ For this question:
 -   exclude variables for class, topic, question, sample size, and everything from lower confidence limit to GeoLocation
 -   structure data so that responses (excellent to poor) are variables taking the value of Data\_value
 -   create a new variable showing the proportion of responses that were “Excellent” or “Very Good”
+
+``` r
+##devtools::install_github("p8105/p8105.datasets")
+```
 
 Part 2: Answer some questions
 -----------------------------
