first stab at second question

--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -3,6 +3,8 @@ p8105\_hw2\_alc2279
 Annie Clark
 September 29, 2018
 
+General questions - do we need to print everything? even when we just load/clean data?
+
 Problem 0
 =========
 
@@ -31,14 +33,14 @@ Read and clean the data; retain line, station, name, station latitude / longitud
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ------------------------------------------------------------ tidyverse 1.2.1 --
+    ## -- Attaching packages ---------------------------------------------------------------------------------------------------------- tidyverse 1.2.1 --
 
     ## v ggplot2 3.0.0     v purrr   0.2.5
     ## v tibble  1.4.2     v dplyr   0.7.6
     ## v tidyr   0.8.1     v stringr 1.3.1
     ## v readr   1.1.1     v forcats 0.3.0
 
-    ## -- Conflicts --------------------------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -126,8 +128,6 @@ subway_data =
   gather(subway_data, key = route_num, value = route_name, route1:route11) %>% 
   separate(route_num, into = c("route", "route_num"), sep = 5) %>%
   select(line:ada, route_num, route_name)
-  
-##Question - copy over subway_data? only saving out because need in next steps...
 ```
 
 How many distinct stations serve the A train?
@@ -171,7 +171,49 @@ Read and clean the Mr. Trash Wheel sheet:
 -   omit rows that do not include dumpster-specific data
 -   round the number of sports balls to the nearest integer and converts the result to an integer variable (using as.integer)
 
-Read and clean precipitation data for 2016 and 2017. For each, omit rows without precipitation data and add a variable year. Next, combine datasets and convert month to a character variable (the variable month.name is built into R and should be useful).
+``` r
+library(readxl)
+
+water_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
+                              sheet = "Mr. Trash Wheel",
+                              range = cell_cols("A:N")) %>% 
+  janitor::clean_names() %>% 
+  filter(!is.na(dumpster),
+         month != "Grand Total") %>% 
+  mutate(sports_balls = as.integer(round(sports_balls)))
+
+#Question - should my filtering be more elegant? rounding and as integer on different lines?
+##question - read_excel on multiple lines? doesnt' look pretty
+?read_excel
+```
+
+    ## starting httpd help server ... done
+
+Read and clean precipitation data for 2016 and 2017. For each, omit rows without precipitation data and add a variable year.
+
+``` r
+precipitation_2016_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
+                              sheet = "2016 Precipitation",
+                              range = "A2:B14") %>% 
+  janitor::clean_names() %>% 
+  mutate(year = "2016")
+
+precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
+                              sheet = "2017 Precipitation",
+                              range = "A2:B14") %>% 
+  janitor::clean_names() %>% 
+  mutate(year = "2017")
+
+##Question - can I just use the range? or do i need to use cell_cols and omit?
+##question - for 2017, load all months? even those with null values?
+```
+
+Next, combine datasets and convert month to a character variable (the variable month.name is built into R and should be useful).
+
+``` r
+precipitation_data = bind_rows(precipitation_2016_data, precipitation_2017_data) %>% 
+  mutate(month = month.name[month])
+```
 
 Part 2: Describe dataset
 ------------------------
