--- a/p8105_hw2_alc2279.Rmd
+++ b/p8105_hw2_alc2279.Rmd
@@ -182,9 +182,25 @@ For this question:
 * create a new variable showing the proportion of responses that were “Excellent” or “Very Good”
 
 ```{r}
-##devtools::install_github("p8105/p8105.datasets")
+devtools::install_github("p8105/p8105.datasets")
+
+library(p8105.datasets)
 
 
+brfss_data = brfss_smart2010 %>% 
+  janitor::clean_names() %>% 
+  rename(state = locationabbr, county = locationdesc) %>% 
+  filter(topic == "Overall Health") %>% 
+  select(-(class:question), -sample_size, -(confidence_limit_low:geo_location)) %>% 
+  spread(key = response, value = data_value) %>% 
+  janitor::clean_names() %>% 
+  select(year:county, excellent, very_good, good, fair, poor) %>% 
+  mutate(high_response_proportion = (excellent + very_good) / 
+           (excellent + very_good + good + fair + poor))
+
+##Question - exclude or can i just include the 5 variables?
+##Question - is there a more elegant way to do the proportion?
+##Quetion - high_reponse_proportion - can i figure out a better name for this?
 ```
 
 ##Part 2: Answer some questions
@@ -193,19 +209,40 @@ Using this dataset, do or answer the following:
 * How many unique locations are included in the dataset? Is every state represented? What state is observed the most?
 
 ```{r}
+brfss_data_test = 
+  mutate(brfss_data, concat = paste(state, county, sep = '-'))
+
+nrow(distinct(brfss_data, county))
+
+##Question - can I assume that state is always the same? if not, is there another way than creating a new dataset?
+
+nrow(distinct(brfss_data, state))
+
+##Question - can we assume that all 50 states are represented because gives 51 and DC is in there? Do we need to go check?
+
+brfss_data %>% 
+  count(state) %>% 
+  arrange(desc(n))
 
 ```
 
 * In 2002, what is the median of the “Excellent” response value?
 
 ```{r}
+brfss_2002_data = 
+  brfss_data %>%
+  filter(year == 2002)
 
+median(brfss_2002_data$excellent, na.rm = TRUE)
+
+#Question - create new dataset??????? is there a way to pipe into median?
 ```
 
 * Make a histogram of “Excellent” response values in the year 2002.
 
 ```{r}
-
+ggplot(brfss_2002_data, aes(x = excellent)) + 
+  geom_histogram()
 ```
 
 * Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
