--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -33,14 +33,14 @@ Read and clean the data; retain line, station, name, station latitude / longitud
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ---------------------------------------------------------------------------------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages ------------------------------------------------------------------------- tidyverse 1.2.1 --
 
     ## v ggplot2 3.0.0     v purrr   0.2.5
     ## v tibble  1.4.2     v dplyr   0.7.6
     ## v tidyr   0.8.1     v stringr 1.3.1
     ## v readr   1.1.1     v forcats 0.3.0
 
-    ## -- Conflicts ------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ---------------------------------------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -237,7 +237,30 @@ For this question:
 -   create a new variable showing the proportion of responses that were “Excellent” or “Very Good”
 
 ``` r
-##devtools::install_github("p8105/p8105.datasets")
+devtools::install_github("p8105/p8105.datasets")
+```
+
+    ## Skipping install of 'p8105.datasets' from a github remote, the SHA1 (21f5ad1c) has not changed since last install.
+    ##   Use `force = TRUE` to force installation
+
+``` r
+library(p8105.datasets)
+
+
+brfss_data = brfss_smart2010 %>% 
+  janitor::clean_names() %>% 
+  rename(state = locationabbr, county = locationdesc) %>% 
+  filter(topic == "Overall Health") %>% 
+  select(-(class:question), -sample_size, -(confidence_limit_low:geo_location)) %>% 
+  spread(key = response, value = data_value) %>% 
+  janitor::clean_names() %>% 
+  select(year:county, excellent, very_good, good, fair, poor) %>% 
+  mutate(high_response_proportion = (excellent + very_good) / 
+           (excellent + very_good + good + fair + poor))
+
+##Question - exclude or can i just include the 5 variables?
+##Question - is there a more elegant way to do the proportion?
+##Quetion - high_reponse_proportion - can i figure out a better name for this?
 ```
 
 Part 2: Answer some questions
@@ -247,8 +270,73 @@ Using this dataset, do or answer the following:
 
 -   How many unique locations are included in the dataset? Is every state represented? What state is observed the most?
 
+``` r
+brfss_data_test = 
+  mutate(brfss_data, concat = paste(state, county, sep = '-'))
+
+nrow(distinct(brfss_data, county))
+```
+
+    ## [1] 404
+
+``` r
+##Question - can I assume that state is always the same? if not, is there another way than creating a new dataset?
+
+nrow(distinct(brfss_data, state))
+```
+
+    ## [1] 51
+
+``` r
+##Question - can we assume that all 50 states are represented because gives 51 and DC is in there? Do we need to go check?
+
+brfss_data %>% 
+  count(state) %>% 
+  arrange(desc(n))
+```
+
+    ## # A tibble: 51 x 2
+    ##    state     n
+    ##    <chr> <int>
+    ##  1 NJ      146
+    ##  2 FL      122
+    ##  3 NC      115
+    ##  4 WA       97
+    ##  5 MD       90
+    ##  6 MA       79
+    ##  7 TX       71
+    ##  8 NY       65
+    ##  9 SC       63
+    ## 10 CO       59
+    ## # ... with 41 more rows
+
 -   In 2002, what is the median of the “Excellent” response value?
 
+``` r
+brfss_2002_data = 
+  brfss_data %>%
+  filter(year == 2002)
+
+median(brfss_2002_data$excellent, na.rm = TRUE)
+```
+
+    ## [1] 23.6
+
+``` r
+#Question - create new dataset??????? is there a way to pipe into median?
+```
+
 -   Make a histogram of “Excellent” response values in the year 2002.
+
+``` r
+ggplot(brfss_2002_data, aes(x = excellent)) + 
+  geom_histogram()
+```
+
+    ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
+
+    ## Warning: Removed 2 rows containing non-finite values (stat_bin).
+
+![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-15-1.png)
 
 -   Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
