finished up problem 3 :)

--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -246,7 +246,6 @@ devtools::install_github("p8105/p8105.datasets")
 ``` r
 library(p8105.datasets)
 
-
 brfss_data = brfss_smart2010 %>% 
   janitor::clean_names() %>% 
   rename(state = locationabbr, county = locationdesc) %>% 
@@ -340,3 +339,15 @@ ggplot(brfss_2002_data, aes(x = excellent)) +
 ![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-15-1.png)
 
 -   Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
+
+``` r
+brfss_queens_ny_data = 
+  brfss_data %>%
+  filter(county %in% c("NY - Queens County", "NY - New York County")) %>% 
+  mutate(excellent_proportion = excellent / (excellent + very_good + good + fair + poor))
+
+ggplot(brfss_queens_ny_data, aes(x = year, y = excellent_proportion)) + 
+  geom_point(aes(color = county))
+```
+
+![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-16-1.png)
