--- a/p8105_hw2_alc2279.Rmd
+++ b/p8105_hw2_alc2279.Rmd
@@ -4,29 +4,42 @@ author: "Annie Clark"
 date: "September 29, 2018"
 output: github_document
 ---
-General questions - do we need to print everything? even when we just load/clean data?
+General questions - do we need to print everything? even when just load/clean data?
 
 
 #Problem 0
-This “problem” focuses on structure of your submission, especially the use git and GitHub for reproducibility, R Projects to organize your work, R Markdown to write reproducible reports, relative paths to load data from local files, and reasonable naming structures for your files.
+This “problem” focuses on structure of your submission, especially the use git 
+and GitHub for reproducibility, R Projects to organize your work, R Markdown 
+to write reproducible reports, relative paths to load data from local files, and 
+reasonable naming structures for your files.
 
 To that end:
 
-* create a public GitHub repo + local R Project; we suggest naming this repo / directory
-p8105_hw2_YOURUNI (e.g.  p8105_hw2_ajg2202 for Jeff), but that’s not required
-* create a single .Rmd file named p8105_hw2_YOURUNI.Rmd that renders to github_document
-* create a subdirectory to store the local data files used in Problems 1 and 2, and use 
-relative paths to access these data files
+* create a public GitHub repo + local R Project; we suggest naming this 
+repo / directory p8105_hw2_YOURUNI (e.g.  p8105_hw2_ajg2202 for Jeff), but 
+that’s not required
+* create a single .Rmd file named p8105_hw2_YOURUNI.Rmd that renders to 
+github_document
+* create a subdirectory to store the local data files used in Problems 1 and 2,
+and use relative paths to access these data files
 * Your solutions to Problems 1, 2, and 3 should be implemented in your .Rmd file, 
-and your git commit history should reflect the process you used to solve these Problems.
+and your git commit history should reflect the process you used to solve these 
+problems.
 
-For this Problem, we will assess adherence to the instructions above regarding repo structure, git commit history, and whether we are able to knit your .Rmd to ensure that your work is reproducible. Adherence to appropriate styling and clarity of code will be assessed in Problems 1+.
+For this Problem, we will assess adherence to the instructions above regarding 
+repo structure, git commit history, and whether we are able to knit your .Rmd 
+to ensure that your work is reproducible. Adherence to appropriate styling and 
+clarity of code will be assessed in Problems 1+.
 
 #Problem 1
 ##Part 1: Read and clean data
-This problem focuses on NYC Transit data; in particular, this CSV file contains information related to each entrance and exit for each subway station in NYC.
+This problem focuses on NYC Transit data; in particular, this CSV file contains 
+information related to each entrance and exit for each subway station in NYC.
 
-Read and clean the data; retain line, station, name, station latitude / longitude, routes served, entry, vending, entrance type, and ADA compliance. Convert the entry variable from character (YES vs NO) to a logical variable (the ifelse or recode function may be useful).
+Read and clean the data; retain line, station, name, station latitude / longitude, 
+routes served, entry, vending, entrance type, and ADA compliance. Convert the entry 
+variable from character (YES vs NO) to a logical variable (the ifelse or recode 
+function may be useful).
 
 ```{r}
 library(tidyverse)
@@ -35,32 +48,35 @@ subway_data =
   read_csv(file = "./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
   janitor::clean_names() %>% 
   select(line:entry, vending, ada) %>% 
-  mutate(entry = recode(entry, "YES" = 1, "NO" = 0),
-         entry = as.logical(entry))
-
-##Question - (1) as.logical and recode on same line? (2) better way to go char->log?
+  mutate(entry = entry == "YES")
 ```
 
 ##Part 2: Describe dataset
-Write a short paragraph about this dataset – explain briefly what variables the dataset contains, describe your data cleaning steps so far, and give the dimension (rows x columns) of the resulting dataset. Are these data tidy?
+Write a short paragraph about this dataset – explain briefly what variables the 
+dataset contains, describe your data cleaning steps so far, and give the dimension 
+(rows x columns) of the resulting dataset. Are these data tidy?
 
 
 
 ##Part 3: Answer some questions
 
-* How many distinct stations are there? Note that stations are identified both by name and by line (e.g. 125th St A/B/C/D; 125st 1; 125st 4/5); the distinct function may be useful here.
+* How many distinct stations are there? Note that stations are identified both 
+by name and by line (e.g. 125th St A/B/C/D; 125st 1; 125st 4/5); the distinct 
+function may be useful here.
 
 ```{r}
-nrow(distinct(subway_data, station_name, line))
-
-##Question - the "line" in the dataset is not A/B/C/D; rather it's lexington, 4th ave, etc. 
-##Question - nrow and function on one line? any way to make more simple?
+subway_data %>% 
+  distinct(.data = ., station_name, line) %>% 
+  nrow(.)
 ```
 
 * How many stations are ADA compliant?
 
 ```{r}
-nrow(filter(subway_data, ada == TRUE))
+subway_data %>% 
+  filter(ada == TRUE) %>% 
+  nrow(.)
+## needs to be a subset of the first 
 ```
 
 * What proportion of station entrances / exits without vending allow entrance?
@@ -69,11 +85,17 @@ nrow(filter(subway_data, ada == TRUE))
 #find number of entrances/exits with no vending and entry
 entry_no_vending = nrow(filter(subway_data, vending == "NO", entry == TRUE))
 
+##TAKE MEAN OF LOGICAL VARIABLE TO GET PROPORTION
+
 #find total number of entrances/exits
 all_entrances_exits = nrow(subway_data)
 
-#find proportion
+#find proportion -- homework 1; tried functions on different variables
 entry_no_vending / all_entrances_exits
+
+##den - stations with no vending
+##num - allow entry of those
+##need to take the mean of a filtered
 ```
 
 
@@ -93,6 +115,13 @@ a_train_stations = filter(subway_data, route_name == "A")
 
 nrow(distinct(a_train_stations, station_name))
 
+subway_data %>% 
+  filter(route_name == "A") %>% 
+  distinct(.data = ., station_name) %>% 
+  nrow(.)
+
+?nrow
+
 ##Questin - I created a new dataset -- is there a way to use piping for this?
 ```
 
@@ -107,14 +136,17 @@ nrow(filter(a_train_stations, ada == TRUE))
 #Problem 2
 
 ##Part 1: Read and clean data
-This problem uses the Mr. Trash Wheel dataset, available as an Excel file on the course website. Please use the  HealthyHarborWaterWheelTotals2017-9-26.xlsx version.
+This problem uses the Mr. Trash Wheel dataset, available as an Excel file on the 
+course website. Please use the  HealthyHarborWaterWheelTotals2017-9-26.xlsx version.
 
 Read and clean the Mr. Trash Wheel sheet:
 
-* specify the sheet in the Excel file and to omit columns containing notes (using the range argument and cell_cols() function)
+* specify the sheet in the Excel file and to omit columns containing notes (using 
+the range argument and cell_cols() function)
 * use reasonable variable names
 * omit rows that do not include dumpster-specific data
-* round the number of sports balls to the nearest integer and converts the result to an integer variable (using as.integer)
+* round the number of sports balls to the nearest integer and converts the result 
+to an integer variable (using as.integer)
 
 ```{r}
 library(readxl)
@@ -127,12 +159,15 @@ water_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xls
          month != "Grand Total") %>% 
   mutate(sports_balls = as.integer(round(sports_balls)))
 
+##another way explanation
+
 #Question - should my filtering be more elegant? rounding and as integer on different lines?
-##question - read_excel on multiple lines? doesnt' look pretty
+##question - read_excel on multiple lines? doesnt' look pretty - fine
 ?read_excel
 ```
 
-Read and clean precipitation data for 2016 and 2017. For each, omit rows without precipitation data and add a variable year. 
+Read and clean precipitation data for 2016 and 2017. For each, omit rows without 
+precipitation data and add a variable year. 
 
 ```{r}
 precipitation_2016_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
@@ -147,11 +182,13 @@ precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9
   janitor::clean_names() %>% 
   mutate(year = "2017")
 
-##Question - can I just use the range? or do i need to use cell_cols and omit?
+##Question - can I just use the range? or do i need to use cell_cols and omit? can use it, can also use cell_colls, just explain why you're doing it
 ##question - for 2017, load all months? even those with null values?
+##col_names
 ```
 
-Next, combine datasets and convert month to a character variable (the variable month.name is built into R and should be useful).
+Next, combine datasets and convert month to a character variable (the variable 
+month.name is built into R and should be useful).
 
 ```{r}
 precipitation_data = bind_rows(precipitation_2016_data, precipitation_2017_data) %>% 
@@ -159,10 +196,12 @@ precipitation_data = bind_rows(precipitation_2016_data, precipitation_2017_data)
 ```
 
 ##Part 2: Describe dataset
-Write a paragraph about these data; you are encouraged to use inline R. Be sure to note:
+Write a paragraph about these data; you are encouraged to use inline R. Be sure to 
+note:
 * the number of observations in both resulting datasets
 * give examples of key variables
-For available data, what was the total precipitation in 2017? What was the median number of sports balls in a dumpster in 2016?
+For available data, what was the total precipitation in 2017? What was the median 
+number of sports balls in a dumpster in 2016?
 
 ```{r}
 
@@ -171,15 +210,19 @@ For available data, what was the total precipitation in 2017? What was the media
 #Problem 3
 
 ##Part 1: Read and clean data
-This problem uses the BRFSS data. DO NOT include this dataset in your local data directory; instead, load the data from the  p8105.datasets package.
+This problem uses the BRFSS data. DO NOT include this dataset in your local data 
+directory; instead, load the data from the  p8105.datasets package.
 
 For this question:
 
 * format the data to use appropriate variable names
 * focus on the “Overall Health” topic
-* exclude variables for class, topic, question, sample size, and everything from lower confidence limit to GeoLocation
-* structure data so that responses (excellent to poor) are variables taking the value of Data_value
-* create a new variable showing the proportion of responses that were “Excellent” or “Very Good”
+* exclude variables for class, topic, question, sample size, and everything from 
+lower confidence limit to GeoLocation
+* structure data so that responses (excellent to poor) are variables taking the 
+value of Data_value
+* create a new variable showing the proportion of responses that were “Excellent” 
+or “Very Good”
 
 ```{r}
 devtools::install_github("p8105/p8105.datasets")
@@ -205,7 +248,8 @@ brfss_data = brfss_smart2010 %>%
 ##Part 2: Answer some questions
 Using this dataset, do or answer the following:
 
-* How many unique locations are included in the dataset? Is every state represented? What state is observed the most?
+* How many unique locations are included in the dataset? Is every state represented? 
+What state is observed the most?
 
 ```{r}
 brfss_data_test = 
@@ -234,6 +278,12 @@ brfss_2002_data =
 
 median(brfss_2002_data$excellent, na.rm = TRUE)
 
+brfss_2002_data = 
+  brfss_data %>%
+  filter(year == 2002) %>% 
+  median(brfss_2002_data$excellent, na.rm = TRUE)
+
+
 #Question - create new dataset??????? is there a way to pipe into median?
 ```
 
@@ -244,7 +294,8 @@ ggplot(brfss_2002_data, aes(x = excellent)) +
   geom_histogram()
 ```
 
-* Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
+* Make a scatterplot showing the proportion of “Excellent” response values in New 
+York County and Queens County (both in NY State) in each year from 2002 to 2010.
 
 ```{r}
 brfss_queens_ny_data = 
