added description on problem 1, additional updates to problem 1 and 2

--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -3,7 +3,7 @@ p8105\_hw2\_alc2279
 Annie Clark
 September 29, 2018
 
-General questions - do we need to print everything? even when we just load/clean data?
+General questions - do we need to print everything? even when just load/clean data?
 
 Problem 0
 =========
@@ -15,7 +15,7 @@ To that end:
 -   create a public GitHub repo + local R Project; we suggest naming this repo / directory p8105\_hw2\_YOURUNI (e.g. p8105\_hw2\_ajg2202 for Jeff), but that’s not required
 -   create a single .Rmd file named p8105\_hw2\_YOURUNI.Rmd that renders to github\_document
 -   create a subdirectory to store the local data files used in Problems 1 and 2, and use relative paths to access these data files
--   Your solutions to Problems 1, 2, and 3 should be implemented in your .Rmd file, and your git commit history should reflect the process you used to solve these Problems.
+-   Your solutions to Problems 1, 2, and 3 should be implemented in your .Rmd file, and your git commit history should reflect the process you used to solve these problems.
 
 For this Problem, we will assess adherence to the instructions above regarding repo structure, git commit history, and whether we are able to knit your .Rmd to ensure that your work is reproducible. Adherence to appropriate styling and clarity of code will be assessed in Problems 1+.
 
@@ -49,8 +49,7 @@ subway_data =
   read_csv(file = "./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
   janitor::clean_names() %>% 
   select(line:entry, vending, ada) %>% 
-  mutate(entry = recode(entry, "YES" = 1, "NO" = 0),
-         entry = as.logical(entry))
+  mutate(entry = entry == "YES")
 ```
 
     ## Parsed with column specification:
@@ -71,13 +70,28 @@ subway_data =
     ## See spec(...) for full column specifications.
 
 ``` r
-##Question - (1) as.logical and recode on same line? (2) better way to go char->log?
+View(subway_data)
+class(subway_data$entry)
 ```
+
+    ## [1] "logical"
 
 Part 2: Describe dataset
 ------------------------
 
+Prompt:
+-------
+
 Write a short paragraph about this dataset – explain briefly what variables the dataset contains, describe your data cleaning steps so far, and give the dimension (rows x columns) of the resulting dataset. Are these data tidy?
+
+Response
+--------
+
+The dataset, subway\_data, includes charcteristics of every subway entrance or exit; more specifically, it includes data about what lines and routes can be accessed by each entrance/exit (line and route1:route11), its location, (station\_latitude, station\_longitude), and some important characteristics, like if entry is allowed as opposed to just an exit (entry), if there is vending available to buy tickets (vending), how the entrance/exit is accessible (i.e. by stair, elevator, etc.) (entrance\_type), and lastly if the entrance/exit is approved by the ADA (ada). In the original dataset, there was additional information included, like whether there is staffing, if crossovers are available (to a different line) and several variables about the location and cross streets of the entrance. These additional variables are not important to us for this exercise.
+
+So far, I have paired down the data to the relevant variables, standardized the names (i.e. made them lower case and removed spaces/special characters), and converted the entry variable from character to logical, which will be useful in the analysis.
+
+So far, this tabel that consists of 1868 rows and 19 columns is not yet considered to be "tidy." The 11 columns that contain route information need to be gathered into one variable (and additionally cleaned up), the vending variable should be changed to logical, the entrance\_type variable could probably be changed to factor, and I would want to play around with cleaning up station\_name and line (i.e. standardizing the case and possible the names, i.e. avenue vs. ave).
 
 Part 3: Answer some questions
 -----------------------------
@@ -85,38 +99,61 @@ Part 3: Answer some questions
 -   How many distinct stations are there? Note that stations are identified both by name and by line (e.g. 125th St A/B/C/D; 125st 1; 125st 4/5); the distinct function may be useful here.
 
 ``` r
-nrow(distinct(subway_data, station_name, line))
+subway_data %>% 
+  distinct(.data = ., station_name, line) %>% 
+  nrow(.)
 ```
 
     ## [1] 465
 
 ``` r
-##Question - the "line" in the dataset is not A/B/C/D; rather it's lexington, 4th ave, etc. 
-##Question - nrow and function on one line? any way to make more simple?
+distinct(subway_data, entrance_type)
 ```
+
+    ## # A tibble: 7 x 1
+    ##   entrance_type
+    ##   <chr>        
+    ## 1 Stair        
+    ## 2 Elevator     
+    ## 3 Easement     
+    ## 4 Escalator    
+    ## 5 Door         
+    ## 6 Ramp         
+    ## 7 Walkway
 
 -   How many stations are ADA compliant?
 
 ``` r
-nrow(filter(subway_data, ada == TRUE))
+subway_data %>%
+  filter(ada == TRUE) %>%
+  distinct(.data = ., station_name, line) %>% 
+  nrow(.)
 ```
 
-    ## [1] 468
+    ## [1] 84
 
 -   What proportion of station entrances / exits without vending allow entrance?
 
 ``` r
-#find number of entrances/exits with no vending and entry
-entry_no_vending = nrow(filter(subway_data, vending == "NO", entry == TRUE))
-
-#find total number of entrances/exits
-all_entrances_exits = nrow(subway_data)
-
-#find proportion
-entry_no_vending / all_entrances_exits
+subway_data %>% 
+  filter(vending == "NO") %>%
+  mean(entry)
 ```
 
-    ## [1] 0.0369379
+    ## Warning in mean.default(., entry): argument is not numeric or logical:
+    ## returning NA
+
+    ## [1] NA
+
+``` r
+class(subway_data$entry)
+```
+
+    ## [1] "logical"
+
+``` r
+#Question - not returning mean correctly -- saying that it is not logical nor numeric, but it is
+```
 
 Part 4: Another exericse
 ------------------------
@@ -133,28 +170,24 @@ subway_data =
 How many distinct stations serve the A train?
 
 ``` r
-a_train_stations = filter(subway_data, route_name == "A")
-
-nrow(distinct(a_train_stations, station_name))
+subway_data %>% 
+  filter(route_name == "A") %>% 
+  distinct(.data = ., station_name) %>% 
+  nrow(.)
 ```
 
     ## [1] 56
 
-``` r
-##Questin - I created a new dataset -- is there a way to use piping for this?
-```
-
 Of the stations that serve the A train, how many are ADA compliant?
 
 ``` r
-nrow(filter(a_train_stations, ada == TRUE))
+subway_data %>% 
+  filter(route_name == "A", ada == TRUE) %>% 
+  distinct(.data = ., station_name) %>% 
+  nrow(.)
 ```
 
-    ## [1] 107
-
-``` r
-##Question - used new dataset - is there a way to use piping?
-```
+    ## [1] 16
 
 Problem 2
 =========
@@ -181,31 +214,28 @@ water_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xls
   filter(!is.na(dumpster),
          month != "Grand Total") %>% 
   mutate(sports_balls = as.integer(round(sports_balls)))
-
-#Question - should my filtering be more elegant? rounding and as integer on different lines?
-##question - read_excel on multiple lines? doesnt' look pretty
-?read_excel
 ```
-
-    ## starting httpd help server ... done
 
 Read and clean precipitation data for 2016 and 2017. For each, omit rows without precipitation data and add a variable year.
 
 ``` r
 precipitation_2016_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
                               sheet = "2016 Precipitation",
-                              range = "A2:B14") %>% 
+                              range = "A2:B14") %>%
   janitor::clean_names() %>% 
+  rename(precipitation_in = total) %>% 
+  filter(!is.na(precipitation_in)) %>% 
   mutate(year = "2016")
 
 precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
                               sheet = "2017 Precipitation",
                               range = "A2:B14") %>% 
   janitor::clean_names() %>% 
+  rename(precipitation_in = total) %>% 
+  filter(!is.na(precipitation_in)) %>% 
   mutate(year = "2017")
 
-##Question - can I just use the range? or do i need to use cell_cols and omit?
-##question - for 2017, load all months? even those with null values?
+##add comment about why using range? rather than colcells?
 ```
 
 Next, combine datasets and convert month to a character variable (the variable month.name is built into R and should be useful).
@@ -237,13 +267,8 @@ For this question:
 -   create a new variable showing the proportion of responses that were “Excellent” or “Very Good”
 
 ``` r
-devtools::install_github("p8105/p8105.datasets")
-```
+#devtools::install_github("p8105/p8105.datasets")
 
-    ## Skipping install of 'p8105.datasets' from a github remote, the SHA1 (21f5ad1c) has not changed since last install.
-    ##   Use `force = TRUE` to force installation
-
-``` r
 library(p8105.datasets)
 
 brfss_data = brfss_smart2010 %>% 
@@ -257,9 +282,13 @@ brfss_data = brfss_smart2010 %>%
   mutate(high_response_proportion = (excellent + very_good) / 
            (excellent + very_good + good + fair + poor))
 
-##Question - exclude or can i just include the 5 variables?
-##Question - is there a more elegant way to do the proportion?
-##Quetion - high_reponse_proportion - can i figure out a better name for this?
+sum(brfss_data$excellent, brfss_data$poor)
+```
+
+    ## [1] NA
+
+``` r
+##Question - is there a more elegant way to do the proportion? -- logical and then take mean?
 ```
 
 Part 2: Answer some questions
@@ -279,7 +308,8 @@ nrow(distinct(brfss_data, county))
     ## [1] 404
 
 ``` r
-##Question - can I assume that state is always the same? if not, is there another way than creating a new dataset?
+#assuming that the data are correct and the state always equals the county(this might not
+#always be the case, due to typos, etc. )
 
 nrow(distinct(brfss_data, state))
 ```
@@ -287,7 +317,7 @@ nrow(distinct(brfss_data, state))
     ## [1] 51
 
 ``` r
-##Question - can we assume that all 50 states are represented because gives 51 and DC is in there? Do we need to go check?
+##assuming all 50 states plus DC are represented
 
 brfss_data %>% 
   count(state) %>% 
@@ -322,6 +352,12 @@ median(brfss_2002_data$excellent, na.rm = TRUE)
     ## [1] 23.6
 
 ``` r
+##brfss_2002_data = 
+##  brfss_data %>%
+##  filter(year == 2002) %>% 
+##  median(brfss_2002_data$excellent, na.rm = TRUE)
+
+
 #Question - create new dataset??????? is there a way to pipe into median?
 ```
 
