--- a/p8105_hw2_alc2279.Rmd
+++ b/p8105_hw2_alc2279.Rmd
@@ -49,14 +49,39 @@ subway_data =
   janitor::clean_names() %>% 
   select(line:entry, vending, ada) %>% 
   mutate(entry = entry == "YES")
+
+View(subway_data)
+class(subway_data$entry)
 ```
 
 ##Part 2: Describe dataset
+##Prompt:
 Write a short paragraph about this dataset – explain briefly what variables the 
 dataset contains, describe your data cleaning steps so far, and give the dimension 
 (rows x columns) of the resulting dataset. Are these data tidy?
 
+##Response
+The dataset, subway_data, includes charcteristics of every subway entrance or exit;
+more specifically, it includes data about what lines and routes can be accessed by each 
+entrance/exit (line and route1:route11), its location, (station_latitude, station_longitude), 
+and some important characteristics, like if entry is allowed as opposed to just an exit 
+(entry), if there is vending available to buy tickets (vending), how the entrance/exit is
+accessible (i.e. by stair, elevator, etc.) (entrance_type), and lastly if the entrance/exit
+is approved by the ADA (ada). In the original dataset, there was additional information
+included, like whether there is staffing, if crossovers are available (to a different
+line) and several variables about the location and cross streets of the entrance. These
+additional variables are not important to us for this exercise. 
 
+So far, I have paired down the data to the relevant variables, standardized the names
+(i.e. made them lower case and removed spaces/special characters), and converted
+the entry variable from character to logical, which will be useful in the analysis. 
+
+So far, this tabel that consists of `r nrow(subway_data)` rows and  `r ncol(subway_data)` 
+columns is not yet considered to be "tidy." The 11 columns that contain route information
+need to be gathered into one variable (and additionally cleaned up), the vending variable
+should be changed to logical, the entrance_type variable could probably be changed to 
+factor, and I would want to play around with cleaning up station_name and line (i.e. 
+standardizing the case and possible the names, i.e. avenue vs. ave). 
 
 ##Part 3: Answer some questions
 
@@ -68,6 +93,8 @@ function may be useful here.
 subway_data %>% 
   distinct(.data = ., station_name, line) %>% 
   nrow(.)
+
+distinct(subway_data, entrance_type)
 ```
 
 * How many stations are ADA compliant?
@@ -82,20 +109,13 @@ subway_data %>%
 * What proportion of station entrances / exits without vending allow entrance?
 
 ```{r}
-#find number of entrances/exits with no vending and entry
-entry_no_vending = nrow(filter(subway_data, vending == "NO", entry == TRUE))
+subway_data %>% 
+  filter(vending == "NO") %>%
+  mean(entry)
 
-##TAKE MEAN OF LOGICAL VARIABLE TO GET PROPORTION
+class(subway_data$entry)
 
-#find total number of entrances/exits
-all_entrances_exits = nrow(subway_data)
-
-#find proportion -- homework 1; tried functions on different variables
-entry_no_vending / all_entrances_exits
-
-##den - stations with no vending
-##num - allow entry of those
-##need to take the mean of a filtered
+#Question - not returning mean correctly -- saying that it is not logical nor numeric, but it is
 ```
 
 
@@ -193,7 +213,14 @@ For available data, what was the total precipitation in 2017? What was the media
 number of sports balls in a dumpster in 2016?
 
 ```{r}
+nrow(precipitation_data)
+sum(precipitation_2017_data$precipitation_in)
+water_wheel_data %>% 
+  filter(year == "2016") %>% 
+  mean(sports_balls)
 
+class(water_wheel_data$sports_balls)
+##question - how to pipe mean? sports_balls is an integer
 ```
 
 #Problem 3
@@ -214,7 +241,7 @@ value of Data_value
 or “Very Good”
 
 ```{r}
-devtools::install_github("p8105/p8105.datasets")
+#devtools::install_github("p8105/p8105.datasets")
 
 library(p8105.datasets)
 
@@ -229,9 +256,10 @@ brfss_data = brfss_smart2010 %>%
   mutate(high_response_proportion = (excellent + very_good) / 
            (excellent + very_good + good + fair + poor))
 
-##Question - exclude or can i just include the 5 variables?
-##Question - is there a more elegant way to do the proportion?
-##Quetion - high_reponse_proportion - can i figure out a better name for this?
+sum(brfss_data$excellent, brfss_data$poor)
+
+
+##Question - is there a more elegant way to do the proportion? -- logical and then take mean?
 ```
 
 ##Part 2: Answer some questions
@@ -246,11 +274,12 @@ brfss_data_test =
 
 nrow(distinct(brfss_data, county))
 
-##Question - can I assume that state is always the same? if not, is there another way than creating a new dataset?
+#assuming that the data are correct and the state always equals the county(this might not
+#always be the case, due to typos, etc. )
 
 nrow(distinct(brfss_data, state))
 
-##Question - can we assume that all 50 states are represented because gives 51 and DC is in there? Do we need to go check?
+##assuming all 50 states plus DC are represented
 
 brfss_data %>% 
   count(state) %>% 
@@ -267,10 +296,10 @@ brfss_2002_data =
 
 median(brfss_2002_data$excellent, na.rm = TRUE)
 
-brfss_2002_data = 
-  brfss_data %>%
-  filter(year == 2002) %>% 
-  median(brfss_2002_data$excellent, na.rm = TRUE)
+##brfss_2002_data = 
+##  brfss_data %>%
+##  filter(year == 2002) %>% 
+##  median(brfss_2002_data$excellent, na.rm = TRUE)
 
 
 #Question - create new dataset??????? is there a way to pipe into median?
