--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -3,7 +3,7 @@ p8105\_hw2\_alc2279
 Annie Clark
 September 29, 2018
 
-General questions - do we need to print everything? even when just load/clean data?
+General questions - do we need to print everything? even when just load/clean data? question 3 - a more elegant way to do proportion? assumptions in question 3, part 2? \*\*make sure to name code chunks
 
 Problem 0
 =========
@@ -33,14 +33,14 @@ Read and clean the data; retain line, station, name, station latitude / longitud
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ------------------------------------------------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages ------------------------------------------------------------------------------------- tidyverse 1.2.1 --
 
     ## v ggplot2 3.0.0     v purrr   0.2.5
     ## v tibble  1.4.2     v dplyr   0.7.6
     ## v tidyr   0.8.1     v stringr 1.3.1
     ## v readr   1.1.1     v forcats 0.3.0
 
-    ## -- Conflicts ---------------------------------------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ---------------------------------------------------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -69,23 +69,14 @@ subway_data =
 
     ## See spec(...) for full column specifications.
 
-``` r
-View(subway_data)
-class(subway_data$entry)
-```
-
-    ## [1] "logical"
-
 Part 2: Describe dataset
 ------------------------
 
-Prompt:
--------
+### Prompt:
 
 Write a short paragraph about this dataset – explain briefly what variables the dataset contains, describe your data cleaning steps so far, and give the dimension (rows x columns) of the resulting dataset. Are these data tidy?
 
-Response
---------
+### Response
 
 The dataset, subway\_data, includes charcteristics of every subway entrance or exit; more specifically, it includes data about what lines and routes can be accessed by each entrance/exit (line and route1:route11), its location, (station\_latitude, station\_longitude), and some important characteristics, like if entry is allowed as opposed to just an exit (entry), if there is vending available to buy tickets (vending), how the entrance/exit is accessible (i.e. by stair, elevator, etc.) (entrance\_type), and lastly if the entrance/exit is approved by the ADA (ada). In the original dataset, there was additional information included, like whether there is staffing, if crossovers are available (to a different line) and several variables about the location and cross streets of the entrance. These additional variables are not important to us for this exercise.
 
@@ -106,21 +97,6 @@ subway_data %>%
 
     ## [1] 465
 
-``` r
-distinct(subway_data, entrance_type)
-```
-
-    ## # A tibble: 7 x 1
-    ##   entrance_type
-    ##   <chr>        
-    ## 1 Stair        
-    ## 2 Elevator     
-    ## 3 Easement     
-    ## 4 Escalator    
-    ## 5 Door         
-    ## 6 Ramp         
-    ## 7 Walkway
-
 -   How many stations are ADA compliant?
 
 ``` r
@@ -137,23 +113,11 @@ subway_data %>%
 ``` r
 subway_data %>% 
   filter(vending == "NO") %>%
-  mean(entry)
+  pull(entry) %>% 
+  mean()
 ```
 
-    ## Warning in mean.default(., entry): argument is not numeric or logical:
-    ## returning NA
-
-    ## [1] NA
-
-``` r
-class(subway_data$entry)
-```
-
-    ## [1] "logical"
-
-``` r
-#Question - not returning mean correctly -- saying that it is not logical nor numeric, but it is
-```
+    ## [1] 0.3770492
 
 Part 4: Another exericse
 ------------------------
@@ -234,8 +198,6 @@ precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9
   rename(precipitation_in = total) %>% 
   filter(!is.na(precipitation_in)) %>% 
   mutate(year = "2017")
-
-##add comment about why using range? rather than colcells?
 ```
 
 Next, combine datasets and convert month to a character variable (the variable month.name is built into R and should be useful).
@@ -249,6 +211,22 @@ Part 2: Describe dataset
 ------------------------
 
 Write a paragraph about these data; you are encouraged to use inline R. Be sure to note: \* the number of observations in both resulting datasets \* give examples of key variables For available data, what was the total precipitation in 2017? What was the median number of sports balls in a dumpster in 2016?
+
+``` r
+sum(precipitation_2017_data$precipitation_in)
+```
+
+    ## [1] 29.93
+
+``` r
+water_wheel_data %>% filter(year == "2016") %>% pull (sports_balls) %>% median()
+```
+
+    ## [1] 26
+
+The first dataset created includes data about the volume/weight and type of trash picked up by the the water wheels (water\_wheel\_data) by date going back to May 2014. The data in its current state is not tidy (i.e. the year variable has missing data, which can easily be cleaned). This data contains 'r nrow(water\_wheel\_data)' rows and 'r ncol(water\_wheel\_data)' columns.
+
+The second dataset includes precipitation data for 2016 and 2017. It was created by combining the 2016 dataset 'r nrow(precipitation\_2016\_data)' rows and 'r ncol(precipitation\_2016\_data) columns) and the 2017 dataset ('r nrow(precipitation\_2017\_data)' rows and 'r ncol(precipitation\_2017\_data columns). The resulting data is 'r nrow(precipitation\_data)' rows and 'r ncol(precipitation\_data) columns
 
 Problem 3
 =========
@@ -267,8 +245,13 @@ For this question:
 -   create a new variable showing the proportion of responses that were “Excellent” or “Very Good”
 
 ``` r
-#devtools::install_github("p8105/p8105.datasets")
+devtools::install_github("p8105/p8105.datasets")
+```
 
+    ## Skipping install of 'p8105.datasets' from a github remote, the SHA1 (21f5ad1c) has not changed since last install.
+    ##   Use `force = TRUE` to force installation
+
+``` r
 library(p8105.datasets)
 
 brfss_data = brfss_smart2010 %>% 
@@ -279,16 +262,7 @@ brfss_data = brfss_smart2010 %>%
   spread(key = response, value = data_value) %>% 
   janitor::clean_names() %>% 
   select(year:county, excellent, very_good, good, fair, poor) %>% 
-  mutate(high_response_proportion = (excellent + very_good) / 
-           (excellent + very_good + good + fair + poor))
-
-sum(brfss_data$excellent, brfss_data$poor)
-```
-
-    ## [1] NA
-
-``` r
-##Question - is there a more elegant way to do the proportion? -- logical and then take mean?
+  mutate(high_response = (excellent + very_good)) #adding excellent and high proportions
 ```
 
 Part 2: Answer some questions
@@ -296,75 +270,81 @@ Part 2: Answer some questions
 
 Using this dataset, do or answer the following:
 
--   How many unique locations are included in the dataset? Is every state represented? What state is observed the most?
+-   How many unique locations are included in the dataset?
 
 ``` r
-brfss_data_test = 
-  mutate(brfss_data, concat = paste(state, county, sep = '-'))
-
-nrow(distinct(brfss_data, county))
+#number of unique locations (county/state)
+brfss_data %>% 
+  distinct(.data = ., county) %>% 
+  nrow()
 ```
 
     ## [1] 404
 
-``` r
-#assuming that the data are correct and the state always equals the county(this might not
-#always be the case, due to typos, etc. )
+-   Is every state represented?
 
-nrow(distinct(brfss_data, state))
+``` r
+#number of states
+brfss_data %>% 
+  distinct(.data = ., state) %>% 
+  nrow()
 ```
 
     ## [1] 51
 
 ``` r
-##assuming all 50 states plus DC are represented
-
-brfss_data %>% 
-  count(state) %>% 
-  arrange(desc(n))
+#view states - identify the extra one
+distinct(brfss_data, state)
 ```
 
-    ## # A tibble: 51 x 2
-    ##    state     n
-    ##    <chr> <int>
-    ##  1 NJ      146
-    ##  2 FL      122
-    ##  3 NC      115
-    ##  4 WA       97
-    ##  5 MD       90
-    ##  6 MA       79
-    ##  7 TX       71
-    ##  8 NY       65
-    ##  9 SC       63
-    ## 10 CO       59
+    ## # A tibble: 51 x 1
+    ##    state
+    ##    <chr>
+    ##  1 AK   
+    ##  2 AL   
+    ##  3 AR   
+    ##  4 AZ   
+    ##  5 CA   
+    ##  6 CO   
+    ##  7 CT   
+    ##  8 DC   
+    ##  9 DE   
+    ## 10 FL   
     ## # ... with 41 more rows
+
+``` r
+## DC is included
+```
+
+There are 51 states represented, including DC.
+
+-   What state is observed the most?
+
+``` r
+brfss_data %>% 
+  count(state) %>% 
+  arrange(desc(n)) %>% 
+  pull(state) %>% 
+  head(1)
+```
+
+    ## [1] "NJ"
 
 -   In 2002, what is the median of the “Excellent” response value?
 
 ``` r
-brfss_2002_data = 
-  brfss_data %>%
-  filter(year == 2002)
-
-median(brfss_2002_data$excellent, na.rm = TRUE)
+brfss_data %>%
+  filter(year == 2002) %>% 
+  pull(excellent) %>% 
+  median(na.rm = TRUE)
 ```
 
     ## [1] 23.6
 
-``` r
-##brfss_2002_data = 
-##  brfss_data %>%
-##  filter(year == 2002) %>% 
-##  median(brfss_2002_data$excellent, na.rm = TRUE)
-
-
-#Question - create new dataset??????? is there a way to pipe into median?
-```
-
 -   Make a histogram of “Excellent” response values in the year 2002.
 
 ``` r
-ggplot(brfss_2002_data, aes(x = excellent)) + 
+ggplot(brfss_data %>% filter(year == 2002), aes(x = excellent)) + 
   geom_histogram()
 ```
 
@@ -372,7 +352,7 @@ ggplot(brfss_2002_data, aes(x = excellent)) +
 
     ## Warning: Removed 2 rows containing non-finite values (stat_bin).
 
-![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-15-1.png)
+![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-17-1.png)
 
 -   Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
 
@@ -386,4 +366,4 @@ ggplot(brfss_queens_ny_data, aes(x = year, y = excellent_proportion)) +
   geom_point(aes(color = county))
 ```
 
-![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-16-1.png)
+![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-18-1.png)
