--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -3,8 +3,6 @@ p8105\_hw2\_alc2279
 Annie Clark
 September 29, 2018
 
-General questions - do we need to print everything? even when just load/clean data? question 3 - a more elegant way to do proportion? assumptions in question 3, part 2? \*\*make sure to name code chunks
-
 Problem 0
 =========
 
@@ -33,14 +31,14 @@ Read and clean the data; retain line, station, name, station latitude / longitud
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ------------------------------------------------------------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages ------------------------------------------------------------- tidyverse 1.2.1 --
 
     ## v ggplot2 3.0.0     v purrr   0.2.5
     ## v tibble  1.4.2     v dplyr   0.7.6
     ## v tidyr   0.8.1     v stringr 1.3.1
     ## v readr   1.1.1     v forcats 0.3.0
 
-    ## -- Conflicts ---------------------------------------------------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ---------------------------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -82,7 +80,7 @@ The dataset, subway\_data, includes charcteristics of every subway entrance or e
 
 So far, I have paired down the data to the relevant variables, standardized the names (i.e. made them lower case and removed spaces/special characters), and converted the entry variable from character to logical, which will be useful in the analysis.
 
-So far, this tabel that consists of 1868 rows and 19 columns is not yet considered to be "tidy." The 11 columns that contain route information need to be gathered into one variable (and additionally cleaned up), the vending variable should be changed to logical, the entrance\_type variable could probably be changed to factor, and I would want to play around with cleaning up station\_name and line (i.e. standardizing the case and possible the names, i.e. avenue vs. ave).
+So far, this table that consists of 1868 rows and 19 columns is not yet considered to be "tidy." The 11 columns that contain route information need to be gathered into one variable (and additionally cleaned up), the vending variable should be changed to logical, the entrance\_type variable could probably be changed to factor, and I would want to play around with cleaning up station\_name and line (i.e. standardizing the case and possible the names, i.e. avenue vs. ave).
 
 Part 3: Answer some questions
 -----------------------------
@@ -128,6 +126,7 @@ Reformat data so that route number and route name are distinct variables.
 subway_data =  
   gather(subway_data, key = route_num, value = route_name, route1:route11) %>% 
   separate(route_num, into = c("route", "route_num"), sep = 5) %>%
+  filter(!is.na(route_name)) %>% 
   select(line:ada, route_num, route_name)
 ```
 
@@ -210,23 +209,17 @@ precipitation_data = bind_rows(precipitation_2016_data, precipitation_2017_data)
 Part 2: Describe dataset
 ------------------------
 
+### Prompt
+
 Write a paragraph about these data; you are encouraged to use inline R. Be sure to note: \* the number of observations in both resulting datasets \* give examples of key variables For available data, what was the total precipitation in 2017? What was the median number of sports balls in a dumpster in 2016?
 
-``` r
-sum(precipitation_2017_data$precipitation_in)
-```
+### Response
 
-    ## [1] 29.93
+The first dataset created includes data about the volume/weight and type of trash picked up by the the water wheels (water\_wheel\_data) by date going back to May 2014. The data in its current state is not tidy (i.e. the year variable has missing data, which can easily be cleaned). This data contains 215 observations and 14 columns. The median number of sports balls that were collected in 2016 by the dumpster was 26.
 
-``` r
-water_wheel_data %>% filter(year == "2016") %>% pull (sports_balls) %>% median()
-```
+The second dataset includes precipitation data for 2016 and 2017 (i.e. number of inches of rain by month and year). It was created by combining the 2016 dataset (12 rows and 3 columns) and the 2017 dataset (8 rows and 3 columns). The resulting data is 20 observations and 3 columns. The total rainfall in 2017 that was recoded (months Jan through Aug) is 29.93.
 
-    ## [1] 26
-
-The first dataset created includes data about the volume/weight and type of trash picked up by the the water wheels (water\_wheel\_data) by date going back to May 2014. The data in its current state is not tidy (i.e. the year variable has missing data, which can easily be cleaned). This data contains 'r nrow(water\_wheel\_data)' rows and 'r ncol(water\_wheel\_data)' columns.
-
-The second dataset includes precipitation data for 2016 and 2017. It was created by combining the 2016 dataset 'r nrow(precipitation\_2016\_data)' rows and 'r ncol(precipitation\_2016\_data) columns) and the 2017 dataset ('r nrow(precipitation\_2017\_data)' rows and 'r ncol(precipitation\_2017\_data columns). The resulting data is 'r nrow(precipitation\_data)' rows and 'r ncol(precipitation\_data) columns
+I can see that joining these tables would be benficial to see how rainfall affects the amount of trash collected. To join these tables, I would use a concatenated variable of month and year as the "key" variables. Other important variables would be rainfall and weight/volume of data collected.
 
 Problem 3
 =========
@@ -316,7 +309,7 @@ distinct(brfss_data, state)
 ## DC is included
 ```
 
-There are 51 states represented, including DC.
+All 50 states (plus DC) are represented.
 
 -   What state is observed the most?
 
@@ -352,18 +345,14 @@ ggplot(brfss_data %>% filter(year == 2002), aes(x = excellent)) +
 
     ## Warning: Removed 2 rows containing non-finite values (stat_bin).
 
-![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-17-1.png)
+![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-16-1.png)
 
 -   Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
 
 ``` r
-brfss_queens_ny_data = 
-  brfss_data %>%
-  filter(county %in% c("NY - Queens County", "NY - New York County")) %>% 
-  mutate(excellent_proportion = excellent / (excellent + very_good + good + fair + poor))
-
-ggplot(brfss_queens_ny_data, aes(x = year, y = excellent_proportion)) + 
+ggplot(brfss_data %>% filter(county %in% c("NY - Queens County", "NY - New York County")) , 
+  aes(x = year, y = excellent)) + 
   geom_point(aes(color = county))
 ```
 
-![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-18-1.png)
+![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-17-1.png)
